samples/_failures_safe/1761355209_4e544d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ae059eb7.c: In function ‘print_analysis’:
./samples/SAFE/__tmp_ae059eb7.c:131:12: error: missing terminating " character
  131 |     printf("Total entries
      |            ^~~~~~~~~~~~~~
./samples/SAFE/__tmp_ae059eb7.c:131:5: error: expected expression at end of input
  131 |     printf("Total entries
      |     ^~~~~~
./samples/SAFE/__tmp_ae059eb7.c:131:5: error: expected declaration or statement at end of input
